<resources>
    <string name="app_name">To-Do-App</string>
    <!-- Home Activity -->
    <string name="title_home">Home</string>

    <!-- Schedule Activity -->
    <string name="title_activity_schedule">Your Schedule</string>
    <string name="title_schedule">Schedule</string>

    <!-- Edit Activity -->
    <string name="title_edit_activity">Events</string>
    <string name="no_events">Add events...</string>
    <string name="item_name"></string>
    <string name="item_date"></string>
    <string name="item_start_time"></string>
    <string name="item_end_time"></string>
    <string name="item_desc"></string>

    <!-- Insert Activity -->
    <string name="title_insert_activity">Add Event</string>
    <string name="date_text_view">Date: </string>
    <string name="title_text_view">Title: </string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="submitBtnText">Submit</string>
    <string name="time_text">00:00</string>

    <!-- Notification Activity -->
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_edit">Your Schedule</string>
</resources>