<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/date_text_view"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/titleText"
            android:layout_width="262dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/title_hint"
            android:hint="@string/title_hint"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/btnStartTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateText"
            app:layout_constraintVertical_bias="0.292"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="76dp"
            android:text="@string/time_text"
            android:onClick="clickTimePickerStart"
            app:layout_constraintBottom_toTopOf="@+id/descriptionText"
            app:layout_constraintEnd_toStartOf="@+id/btnEndTime"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateText"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="76dp"
            android:text="@string/time_text"
            android:onClick="clickTimePickerEnd"
            app:layout_constraintBottom_toTopOf="@+id/descriptionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.755"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleText"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/descriptionText"
            android:layout_width="253dp"
            android:layout_height="191dp"
            android:layout_marginTop="228dp"
            android:gravity="top|left"
            android:hint="@string/description_hint"
            android:inputType="text"
            android:lines="10"
            android:maxLines="15"
            android:minLines="5"
            app:layout_constraintBottom_toTopOf="@+id/submitBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateText"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:text="@string/submitBtnText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateText"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="57dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/descriptionText"
            app:layout_constraintEnd_toStartOf="@+id/btnEndTime"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toEndOf="@+id/btnStartTime"
            app:layout_constraintTop_toBottomOf="@+id/titleText"
            app:layout_constraintVertical_bias="0.05"
            app:srcCompat="@drawable/ic_baseline_arrow_right" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>